--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
 .image{
     display: flex;
     align-items: center;
+    width: 80px;
 }
 
 img {
@@ -219,5 +220,58 @@ p{
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 30px;
         padding: 35px 0px;
+    }
+}
+
+
+
+.slider-box{
+    width: 1280px;
+    height: auto;
+    margin: 10px auto 0;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.slider-box ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: slide 20s infinite alternate ease-in-out;
+}
+
+.slider-box li{
+    width: 100%;
+    list-style: none;
+    position: relative;
+}
+
+
+.slider-box img{
+    width: 100%;
+    height: 100%;
+}
+
+@keyframes slide {
+    0%{ margin-left: 0;}
+    20%{ margin-left: 0;}
+
+    25%{ margin-left: -100%;}
+    45%{ margin-left: -100%;}
+
+    50%{ margin-left: -200%;}
+    70%{ margin-left: -200%;}
+
+    75%{ margin-left: -300%;}
+    100%{ margin-left: -300%;}
+
+    
+    
+}
+
+@media(max-width:897px){
+    .slider-box{
+        width: 100%;
+        
     }
 }
