--- a/style.css
+++ b/style.css
@@ -23,10 +23,6 @@ body{
     width: 80px;
 }
 
-img {
-    width: 80px;
-}
-
 header{
     width: 100%;
     height: 100px;
@@ -102,7 +98,8 @@ header{
         left: auto;
         right: 0px;
         width: 50vw;
-        background: rgba(0,0,0,0.8);
+        background: rgba(0,0,0,0.7);
+        backdrop-filter: blur(5px);
         transition: 0.5s;
         overflow: hidden;
     }
@@ -139,10 +136,8 @@ svg{
 }
 
 
-
-
 p{
-    color: black;
+    color: white;
 }
 
 
@@ -243,7 +238,6 @@ p{
 .slider-box li{
     width: 100%;
     list-style: none;
-    position: relative;
 }
 
 
@@ -275,3 +269,84 @@ p{
         
     }
 }
+
+
+
+
+
+
+
+img {
+    width: 100%;
+    display: block;
+}
+
+h1{
+    text-align: center;
+    color: black;
+}
+
+.contenedor{
+    width: 90%;
+    max-width: 1200px;
+    margin: 20px auto;
+}
+
+.card{
+    background-color: #7e7c7c;
+    margin-bottom: 10px;
+    border-radius: 8px;
+}
+
+.card-header{
+    height: 200px;
+    overflow: hidden;
+}
+.card-header img{
+    border-radius: 8px 8px 0 0;
+}
+
+.card-body{
+    padding: 20px 15px;
+    
+    text-align: justify;
+}
+.card-title{
+    color: rgb(233, 233, 233);
+}
+
+.btn{
+    background-color: #ED1C24;   
+    color: white;
+    display: block;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    margin-top: 10px;
+    border-radius: 8px;
+}
+
+@media(min-width: 900px){
+    .contenedor{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 15px;
+    }
+
+    .card{
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card-body{
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card-description{
+        flex-grow: 1;
+    }
+}
+
